ipyvizzu-story: add env specific stories

--- a/docs/examples/index.ipynb
+++ b/docs/examples/index.ipynb
@@ -18,8 +18,7 @@
     "import pandas as pd\n",
     "\n",
     "from ipyvizzu import Data, Config, Style\n",
-    "from ipyvizzustory.jupyter.story import Story\n",
-    "from ipyvizzustory.storylib.story import Slide, Step\n",
+    "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
     "\n",
     "example_data = Data()\n",
@@ -117,7 +116,7 @@
     "slide5 = Slide(Step(Data.filter(None), Config({\"title\": \"Total U.S. R&D Budget\"})))\n",
     "story.add_slide(slide5)\n",
     "\n",
-    "story"
+    "story.play()"
    ]
   }
  ],
