--- a/docs/examples/index.ipynb
+++ b/docs/examples/index.ipynb
@@ -116,6 +116,19 @@
     "slide5 = Slide(Step(Data.filter(None), Config({\"title\": \"Total U.S. R&D Budget\"})))\n",
     "story.add_slide(slide5)\n",
     "\n",
+    "\n",
+    "story.feature(\"tooltip\", False)\n",
+    "\n",
+    "\n",
+    "handler = \"\"\"\n",
+    "let Year = parseFloat(event.data.text);\n",
+    "if (!isNaN(Year) && Year > 1950 && Year < 2020 && Year % 5 !== 0) {\n",
+    "    event.preventDefault();\n",
+    "}\n",
+    "\"\"\"\n",
+    "story.event(\"plot-axis-label-draw\", handler)\n",
+    "\n",
+    "\n",
     "story.play()"
    ]
   }
