--- a/docs/examples/readme_complex/index.ipynb
+++ b/docs/examples/readme_complex/index.ipynb
@@ -5,7 +5,7 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "## ipyvizzu-story example"
+    "# ipyvizzu-story - example"
    ]
   },
   {
