--- a/docs/examples/readme_complex/index.ipynb
+++ b/docs/examples/readme_complex/index.ipynb
@@ -116,6 +116,22 @@
     "slide5 = Slide(Step(Data.filter(None), Config({\"title\": \"Total U.S. R&D Budget\"})))\n",
     "story.add_slide(slide5)\n",
     "\n",
+    "slide6 = Slide(\n",
+    "    Step(\n",
+    "        Config(\n",
+    "            {\n",
+    "                \"x\": \"Year\",\n",
+    "                \"y\": \"Amount[B$]\",\n",
+    "                \"noop\": \"Function\",\n",
+    "                \"align\": \"none\",\n",
+    "                \"geometry\": \"line\",\n",
+    "                \"title\": \"Total U.S. R&D Budget - Components Side by Side\",\n",
+    "            }\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "story.add_slide(slide6)\n",
+    "\n",
     "\n",
     "story.feature(\"tooltip\", False)\n",
     "\n",
