Changed: Story().feature to Story().set_feature()

--- a/docs/examples/readme_complex/index.ipynb
+++ b/docs/examples/readme_complex/index.ipynb
@@ -133,7 +133,7 @@
     "story.add_slide(slide6)\n",
     "\n",
     "\n",
-    "story.feature(\"tooltip\", False)\n",
+    "story.set_feature(\"tooltip\", False)\n",
     "\n",
     "\n",
     "handler = \"\"\"\n",
