Changed: Story().event to Story().add_event()

--- a/docs/examples/readme_complex/index.ipynb
+++ b/docs/examples/readme_complex/index.ipynb
@@ -142,7 +142,7 @@
     "    event.preventDefault();\n",
     "}\n",
     "\"\"\"\n",
-    "story.event(\"plot-axis-label-draw\", handler)\n",
+    "story.add_event(\"plot-axis-label-draw\", handler)\n",
     "\n",
     "\n",
     "story.play()"
