docs: update titles

--- a/docs/examples/readme/index.ipynb
+++ b/docs/examples/readme/index.ipynb
@@ -5,7 +5,7 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "# ipyvizzu-story - example"
+    "# ipyvizzu-story - basic example"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "title": "ipyvizzu - story - Example"
+  "title": "ipyvizzu-story - basic example"
  },
  "nbformat": 4,
  "nbformat_minor": 5
