--- a/docs/examples/readme_complex/index.ipynb
+++ b/docs/examples/readme_complex/index.ipynb
@@ -5,7 +5,7 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "# ipyvizzu-story - example"
+    "# ipyvizzu-story - complex example"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
-  "title": "ipyvizzu - story - Example"
+  "title": "ipyvizzu-story - complex example"
  },
  "nbformat": 4,
  "nbformat_minor": 5
