--- a/docs/examples/demo/ipyvizzu-story_example.ipynb
+++ b/docs/examples/demo/ipyvizzu-story_example.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "# Create data object, read csv to data frame and add data frame to data object.\n",
     "example_data = Data()\n",
-    "example_df = pd.read_csv(\"ipyvizzu-story_example.csv\", dtype={\"Year\": str})\n",
+    "example_df = pd.read_csv(\"https://raw.githubusercontent.com/vizzuhq/ipyvizzu-story/vp/docs/examples/demo/ipyvizzu-story_example.csv\", dtype={\"Year\": str})\n",
     "example_data.add_data_frame(example_df)"
    ]
   },
