--- a/docs/examples/demo/ipyvizzu-story_example.ipynb
+++ b/docs/examples/demo/ipyvizzu-story_example.ipynb
@@ -23,7 +23,7 @@
     "from ipyvizzu import Data, Config, Style\n",
     "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
-    "#Create data object, read csv to data frame and add data frame to data object.\n",
+    "# Create data object, read csv to data frame and add data frame to data object.\n",
     "example_data = Data()\n",
     "example_df = pd.read_csv(\"https://raw.githubusercontent.com/vizzuhq/ipyvizzu-story/vp/docs/examples/demo/ipyvizzu-story_example.csv\", dtype={\"Year\": str})\n",
     "example_data.add_data_frame(example_df)"
@@ -34,11 +34,11 @@
    "execution_count": null,
    "id": "d61b7146",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#Set the style of the charts in the story\n",
+    "# Set the style of the charts in the story\n",
     "example_style = Style(\n",
     "    {\n",
     "        \"plot\": {\n",
@@ -59,27 +59,27 @@
     "                \"title\": {\"fontSize\": \"1em\", \"paddingTop\": \"2.5em\"},\n",
     "            },\n",
     "        },\n",
-    "        \"logo\":{\"width\": \"5em\"}\n",
+    "        \"logo\": {\"width\": \"5em\"},\n",
     "    }\n",
     ")\n",
     "\n",
-    "#Create story object, add data and style settings to it and set the size of the HTML element \n",
-    "#that appears within the notebook.\n",
+    "# Create story object, add data and style settings to it and set the size of the HTML element\n",
+    "# that appears within the notebook.\n",
     "story = Story(data=example_data, style=example_style)\n",
     "story.set_size(\"100%\", \"400px\")\n",
     "\n",
-    "#Add the first slide, containing a single animation step that sets the initial chart.\n",
+    "# Add the first slide, containing a single animation step that sets the initial chart.\n",
     "slide1 = Slide(\n",
     "    Step(\n",
-    "#Only include rows where the Function value != Defense\n",
+    "        # Only include rows where the Function value != Defense\n",
     "        Data.filter(\"record.Function !== 'Defense'\"),\n",
     "        Config(\n",
     "            {\n",
     "                \"channels\": {\n",
     "                    \"y\": {\n",
     "                        \"set\": [\"Amount[B$]\", \"Function\"],\n",
-    "#Set the range of the y-axis to the min and max of the data being shown\n",
-    "#default value is 110% of the maximum value.                       \n",
+    "                        # Set the range of the y-axis to the min and max of the data being shown\n",
+    "                        # default value is 110% of the maximum value.\n",
     "                        \"range\": {\"min\": \"0%\", \"max\": \"100%\"},\n",
     "                    },\n",
     "                    \"x\": {\"set\": [\"Year\"]},\n",
@@ -88,13 +88,13 @@
     "                \"title\": \"A Stacked Area Chart About the U.S. R&D Budget in 1955-2020\",\n",
     "                \"geometry\": \"area\",\n",
     "            }\n",
-    "        )\n",
+    "        ),\n",
     "    )\n",
     ")\n",
-    "#Add the slide to the story\n",
+    "# Add the slide to the story\n",
     "story.add_slide(slide1)\n",
     "\n",
-    "#Show components side-by-side\n",
+    "# Show components side-by-side\n",
     "slide2 = Slide(\n",
     "    Step(\n",
     "        Config(\n",
@@ -107,117 +107,96 @@
     ")\n",
     "story.add_slide(slide2)\n",
     "\n",
-    "#This slide contains multiple steps.\n",
-    "#Note that the slide is created as an empty object, then steps are added to it one-by-one.\n",
+    "# This slide contains multiple steps.\n",
+    "# Note that the slide is created as an empty object, then steps are added to it one-by-one.\n",
     "slide3 = Slide()\n",
     "\n",
-    "#Step 1 - let's get back to the previous view\n",
-    "slide3.add_step(Step(\n",
-    "        Config(\n",
-    "            {\n",
-    "                \"split\": False\n",
-    "            }\n",
-    "        )\n",
-    "    )\n",
-    ")\n",
-    "#Step 2 - Add the defense function to the chart by removing it from the filter\n",
-    "slide3.add_step(Step(\n",
+    "# Step 1 - let's get back to the previous view\n",
+    "slide3.add_step(Step(Config({\"split\": False})))\n",
+    "# Step 2 - Add the defense function to the chart by removing it from the filter\n",
+    "slide3.add_step(\n",
+    "    Step(\n",
     "        Data.filter(None),\n",
-    "        Config({\n",
-    "            \"title\": \"Add New Category While Keeping the Context\"\n",
-    "        })\n",
+    "        Config({\"title\": \"Add New Category While Keeping the Context\"}),\n",
     "    )\n",
     ")\n",
-    "#Add the multi-step slide to the story, just like any other slide.\n",
+    "# Add the multi-step slide to the story, just like any other slide.\n",
     "story.add_slide(slide3)\n",
     "\n",
-    "#Show share of components\n",
+    "# Show share of components\n",
     "slide4 = Slide(\n",
-    "    Step(\n",
-    "        Config(\n",
-    "            {\n",
-    "                \"align\": \"stretch\",\n",
-    "                \"title\": \"Show Share of Components (%)\"\n",
-    "            }\n",
-    "        )\n",
-    "    )\n",
+    "    Step(Config({\"align\": \"stretch\", \"title\": \"Show Share of Components (%)\"}))\n",
     ")\n",
     "story.add_slide(slide4)\n",
     "\n",
-    "#Compare data from 1955 and 2020\n",
+    "# Compare data from 1955 and 2020\n",
     "slide5 = Slide()\n",
     "\n",
     "\n",
-    "#Step 1 - switch back to value instead of percentage\n",
-    "slide5.add_step(Step(\n",
-    "        Config({\n",
-    "            \"align\":\"none\"\n",
-    "        })\n",
-    "    ))\n",
-    "#Step 2 - switch to a stacked column chart by changing the geometry\n",
-    "slide5.add_step(Step(\n",
-    "        Config({\n",
-    "            \"geometry\":\"rectangle\",\n",
-    "        })\n",
-    "    ))\n",
-    "#Step 2 - zoom to data from the first and last years\n",
-    "slide5.add_step(Step(\n",
-    "        Data.filter(\n",
-    "            \"record.Year === '1955' || record.Year === '2020' \"\n",
+    "# Step 1 - switch back to value instead of percentage\n",
+    "slide5.add_step(Step(Config({\"align\": \"none\"})))\n",
+    "# Step 2 - switch to a stacked column chart by changing the geometry\n",
+    "slide5.add_step(\n",
+    "    Step(\n",
+    "        Config(\n",
+    "            {\n",
+    "                \"geometry\": \"rectangle\",\n",
+    "            }\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "# Step 2 - zoom to data from the first and last years\n",
+    "slide5.add_step(\n",
+    "    Step(\n",
+    "        Data.filter(\"record.Year === '1955' || record.Year === '2020' \"),\n",
+    "        Config(\n",
+    "            {\n",
+    "                \"title\": \"Zoom to Specific Elements\",\n",
+    "            }\n",
     "        ),\n",
-    "       Config({\n",
-    "           \"title\":\"Zoom to Specific Elements\",\n",
-    "       })\n",
-    "    \n",
-    "   ),\n",
+    "    ),\n",
     ")\n",
     "story.add_slide(slide5)\n",
     "\n",
-    "#Group & rearrange elements for comparison\n",
+    "# Group & rearrange elements for comparison\n",
     "slide6 = Slide()\n",
-    "slide6.add_step(Step(\n",
+    "slide6.add_step(\n",
+    "    Step(\n",
     "        Config(\n",
     "            {\n",
-    "                \"x\": [\"Year\",\"Function\"],\n",
+    "                \"x\": [\"Year\", \"Function\"],\n",
     "                \"y\": \"Amount[B$]\",\n",
     "                \"label\": \"Amount[B$]\",\n",
-    "                \"title\":\"Group & Rearrange for Better Comparison\",\n",
+    "                \"title\": \"Group & Rearrange for Better Comparison\",\n",
     "            }\n",
     "        )\n",
     "    )\n",
     ")\n",
     "\n",
-    "slide6.add_step(Step(\n",
-    "        Config(\n",
-    "            {\n",
-    "                \"x\": [\"Function\",\"Year\"]\n",
-    "            }\n",
-    "        )\n",
-    "    )\n",
-    ")\n",
+    "slide6.add_step(Step(Config({\"x\": [\"Function\", \"Year\"]})))\n",
     "story.add_slide(slide6)\n",
     "\n",
     "\n",
-    "#Switch on the tooltip that appears when the user hovers the mouse over a chart element.\n",
+    "# Switch on the tooltip that appears when the user hovers the mouse over a chart element.\n",
     "story.set_feature(\"tooltip\", True)\n",
     "\n",
-    "#Set a handler that prevents showing the year values that are not divisible by 5\n",
+    "# Set a handler that prevents showing the year values that are not divisible by 5\n",
     "handler = \"\"\"\n",
     "let Year = parseFloat(event.data.text);\n",
     "if (!isNaN(Year) && Year > 1950 && Year < 2020 && Year % 5 !== 0) {\n",
     "    event.preventDefault();\n",
     "}\n",
     "\"\"\"\n",
-    "#Add handler to the plot-axis-label-draw event so that it takes effect.\n",
+    "# Add handler to the plot-axis-label-draw event so that it takes effect.\n",
     "story.add_event(\"plot-axis-label-draw\", handler)\n",
     "\n",
-    "#Play the created story\n",
+    "# Play the created story\n",
     "story.play()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81fb9717",
+   "id": "bf49f6f8",
    "metadata": {},
    "source": [
     "### Learn more about [ipyvizzu-story](https://github.com/vizzuhq/ipyvizzu-story/)"
@@ -226,9 +205,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -240,9 +219,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   },
-  "title": "ipyvizzu - story - Example"
+  "title": "ipyvizzu-story - Example"
  },
  "nbformat": 4,
  "nbformat_minor": 5
