--- a/docs/examples/complex/complex.ipynb
+++ b/docs/examples/complex/complex.ipynb
@@ -53,19 +53,21 @@
     "                    \"paddingRight\": \"0em\",\n",
     "                    \"paddingTop\": \"1em\",\n",
     "                },\n",
-    "                \"title\": {\"fontSize\": \"1em\", \"paddingTop\": \"2.5em\"},\n",
+    "                \"title\": {\"fontSize\": \"0.8em\", \"paddingTop\": \"2.5em\"},\n",
     "            },\n",
     "        },\n",
     "        \"logo\": {\"width\": \"5em\"},\n",
     "    }\n",
     ")\n",
     "\n",
-    "# Create story object, add data and style settings to it and set the size of the HTML element\n",
+    "# Create story object, add data and style settings to it\n",
+    "# and set the size of the HTML element\n",
     "# that appears within the notebook.\n",
     "story = Story(data=example_data, style=example_style)\n",
     "story.set_size(\"100%\", \"400px\")\n",
     "\n",
-    "# Add the first slide, containing a single animation step that sets the initial chart.\n",
+    "# Add the first slide,\n",
+    "# containing a single animation step that sets the initial chart.\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        # Only include rows where the Function value != Defense\n",
@@ -75,14 +77,15 @@
     "                \"channels\": {\n",
     "                    \"y\": {\n",
     "                        \"set\": [\"Amount[B$]\", \"Function\"],\n",
-    "                        # Set the range of the y-axis to the min and max of the data being shown\n",
+    "                        # Set the range of the y-axis\n",
+    "                        # to the min and max of the data being shown\n",
     "                        # default value is 110% of the maximum value.\n",
     "                        \"range\": {\"min\": \"0%\", \"max\": \"100%\"},\n",
     "                    },\n",
     "                    \"x\": {\"set\": [\"Year\"]},\n",
     "                    \"color\": \"Function\",\n",
     "                },\n",
-    "                \"title\": \"A Stacked Area Chart About the U.S. R&D Budget in 1955-2020\",\n",
+    "                \"title\": \"Stacked Area Chart - U.S. R&D Budget in 1955-2020\",\n",
     "                \"geometry\": \"area\",\n",
     "            }\n",
     "        ),\n",
@@ -105,7 +108,8 @@
     "story.add_slide(slide2)\n",
     "\n",
     "# This slide contains multiple steps.\n",
-    "# Note that the slide is created as an empty object, then steps are added to it one-by-one.\n",
+    "# Note that the slide is created as an empty object,\n",
+    "# then steps are added to it one-by-one.\n",
     "slide3 = Slide()\n",
     "\n",
     "# Step 1 - let's get back to the previous view\n",
@@ -122,7 +126,9 @@
     "\n",
     "# Show share of components\n",
     "slide4 = Slide(\n",
-    "    Step(Config({\"align\": \"stretch\", \"title\": \"Show Share of Components (%)\"}))\n",
+    "    Step(\n",
+    "        Config({\"align\": \"stretch\", \"title\": \"Show Share of Components (%)\"})\n",
+    "    )\n",
     ")\n",
     "story.add_slide(slide4)\n",
     "\n",
@@ -174,7 +180,8 @@
     "story.add_slide(slide6)\n",
     "\n",
     "\n",
-    "# Switch on the tooltip that appears when the user hovers the mouse over a chart element.\n",
+    "# Switch on the tooltip that appears\n",
+    "# when the user hovers the mouse over a chart element.\n",
     "story.set_feature(\"tooltip\", True)\n",
     "\n",
     "# Set a handler that prevents showing the year values that are not divisible by 5\n",
@@ -199,7 +206,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# If you want to save the story as an interactive HTML containing only the output of the previous cell,\n",
+    "# If you want to save the story as an interactive HTML\n",
+    "# (containing only the output of the previous cell),\n",
     "# use the following command:\n",
     "# story.export_to_html(filename=\"mystory.html\")"
    ],
