--- a/docs/examples/demo/ipyvizzu-story_example.ipynb
+++ b/docs/examples/demo/ipyvizzu-story_example.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a892fbda",
+   "id": "d3186103",
    "metadata": {},
    "source": [
-    "# ipyvizzu-story - Example\n",
+    "# ipyvizzu-story - example\n",
+    "\n",
     "The history of the US Federal R&D budget between 1955-2020."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff7301a",
+   "id": "71c686cf",
    "metadata": {
     "scrolled": true
    },
@@ -35,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d61b7146",
+   "id": "0f9a23ef",
    "metadata": {
     "scrolled": false
    },
@@ -59,19 +60,21 @@
     "                    \"paddingRight\": \"0em\",\n",
     "                    \"paddingTop\": \"1em\",\n",
     "                },\n",
-    "                \"title\": {\"fontSize\": \"1em\", \"paddingTop\": \"2.5em\"},\n",
+    "                \"title\": {\"fontSize\": \"0.8em\", \"paddingTop\": \"2.5em\"},\n",
     "            },\n",
     "        },\n",
     "        \"logo\": {\"width\": \"5em\"},\n",
     "    }\n",
     ")\n",
     "\n",
-    "# Create story object, add data and style settings to it and set the size of the HTML element\n",
+    "# Create story object, add data and style settings to it\n",
+    "# and set the size of the HTML element\n",
     "# that appears within the notebook.\n",
     "story = Story(data=example_data, style=example_style)\n",
     "story.set_size(\"100%\", \"400px\")\n",
     "\n",
-    "# Add the first slide, containing a single animation step that sets the initial chart.\n",
+    "# Add the first slide,\n",
+    "# containing a single animation step that sets the initial chart.\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        # Only include rows where the Function value != Defense\n",
@@ -81,14 +84,15 @@
     "                \"channels\": {\n",
     "                    \"y\": {\n",
     "                        \"set\": [\"Amount[B$]\", \"Function\"],\n",
-    "                        # Set the range of the y-axis to the min and max of the data being shown\n",
+    "                        # Set the range of the y-axis\n",
+    "                        # to the min and max of the data being shown\n",
     "                        # default value is 110% of the maximum value.\n",
     "                        \"range\": {\"min\": \"0%\", \"max\": \"100%\"},\n",
     "                    },\n",
     "                    \"x\": {\"set\": [\"Year\"]},\n",
     "                    \"color\": \"Function\",\n",
     "                },\n",
-    "                \"title\": \"A Stacked Area Chart About the U.S. R&D Budget in 1955-2020\",\n",
+    "                \"title\": \"Stacked Area Chart - U.S. R&D Budget in 1955-2020\",\n",
     "                \"geometry\": \"area\",\n",
     "            }\n",
     "        ),\n",
@@ -111,7 +115,8 @@
     "story.add_slide(slide2)\n",
     "\n",
     "# This slide contains multiple steps.\n",
-    "# Note that the slide is created as an empty object, then steps are added to it one-by-one.\n",
+    "# Note that the slide is created as an empty object,\n",
+    "# then steps are added to it one-by-one.\n",
     "slide3 = Slide()\n",
     "\n",
     "# Step 1 - let's get back to the previous view\n",
@@ -128,7 +133,9 @@
     "\n",
     "# Show share of components\n",
     "slide4 = Slide(\n",
-    "    Step(Config({\"align\": \"stretch\", \"title\": \"Show Share of Components (%)\"}))\n",
+    "    Step(\n",
+    "        Config({\"align\": \"stretch\", \"title\": \"Show Share of Components (%)\"})\n",
+    "    )\n",
     ")\n",
     "story.add_slide(slide4)\n",
     "\n",
@@ -180,7 +187,8 @@
     "story.add_slide(slide6)\n",
     "\n",
     "\n",
-    "# Switch on the tooltip that appears when the user hovers the mouse over a chart element.\n",
+    "# Switch on the tooltip that appears\n",
+    "# when the user hovers the mouse over a chart element.\n",
     "story.set_feature(\"tooltip\", True)\n",
     "\n",
     "# Set a handler that prevents showing the year values that are not divisible by 5\n",
@@ -200,29 +208,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20039ae5",
+   "id": "3b853f53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you want to save the story as an interactive HTML containing only the output of the previous cell,\n",
+    "# If you want to save the story as an interactive HTML\n",
+    "# (containing only the output of the previous cell),\n",
     "# use the following command:\n",
     "# story.export_to_html(filename=\"mystory.html\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bf49f6f8",
+   "id": "1a4a70d4",
    "metadata": {},
    "source": [
-    "### Learn more about [ipyvizzu-story](https://github.com/vizzuhq/ipyvizzu-story/)"
+    "## Learn more about ipyvizzu-story: [Documentation site](https://vizzuhq.github.io/ipyvizzu-story/), [GitHub repository](https://github.com/vizzuhq/ipyvizzu-story/)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -234,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   },
   "title": "ipyvizzu-story - Example"
  },
