--- a/docs/examples/basic/basic.ipynb
+++ b/docs/examples/basic/basic.ipynb
@@ -5,7 +5,9 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "# ipyvizzu-story - basic example"
+    "# ipyvizzu-story - basic example\n",
+    "\n",
+    "The below chart shows a basic use case for `ipyvizzu-story`. For particular questions on setting up or customizing individual visuals, please see the [ipyvizzu documentation](https://ipyvizzu.vizzuhq.com/tutorial/01_01_intro.html)."
    ]
   },
   {
@@ -18,14 +20,17 @@
     "from ipyvizzu import Data, Config\n",
     "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
-    "\n",
+    "# First, initialize our data. \n",
     "data = Data()\n",
     "data.add_series(\"Foo\", [\"Alice\", \"Bob\", \"Ted\"])\n",
     "data.add_series(\"Bar\", [15, 32, 12])\n",
     "data.add_series(\"Baz\", [5, 3, 2])\n",
     "\n",
+    "# Create a blank story, attaching it to our dataset. \n",
     "story = Story(data=data)\n",
     "\n",
+    "# Each slide here is a page in the final interactive story\n",
+    "# For info on configuring Steps and providing Configs, please see the base ipyvizzu documentation.\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        Config({\"x\": \"Foo\", \"y\": \"Bar\"}),\n",
@@ -33,6 +38,8 @@
     ")\n",
     "story.add_slide(slide1)\n",
     "\n",
+    "# Create the second slide.\n",
+    "# Configs provided here are changes to the visualization created in the previous Step.\n",
     "slide2 = Slide(\n",
     "    Step(\n",
     "        Config({\"color\": \"Foo\", \"x\": \"Baz\", \"geometry\": \"circle\"}),\n",
@@ -40,15 +47,24 @@
     ")\n",
     "story.add_slide(slide2)\n",
     "\n",
+    "# Display our end story! \n",
     "story.play()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e63da0aa-4688-49a2-8e36-a25b2fd0517e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -60,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0"
   },
   "title": "ipyvizzu-story - basic example"
  },
