--- a/docs/examples/complex/complex.ipynb
+++ b/docs/examples/complex/complex.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6e176697",
+   "metadata": {},
    "source": [
     "# ipyvizzu-story - complex example\n",
     "\n",
-    "The history of the US Federal R&D budget between 1955-2020."
-   ],
-   "metadata": {},
-   "id": "6e176697"
+    "In this more involved example, we explore the history of the US Federal R&D budget between 1955-2020. On top of the base functionality introduced in the basic example, this story showcases: \n",
+    "\n",
+    "* Styling the overall Story\n",
+    "* Setting the size of the Story\n",
+    "* Slides with multiple steps"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "554f2996",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -26,16 +35,14 @@
     "    dtype={\"Year\": str},\n",
     ")\n",
     "example_data.add_data_frame(example_df)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": true
-   },
-   "id": "554f2996"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "479e901d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Set the style of the charts in the story\n",
     "example_style = Style(\n",
@@ -73,6 +80,8 @@
     "slide1 = Slide(\n",
     "    Step(\n",
     "        # Only include rows where the Function value != Defense\n",
+    "        # Note, filters currently only accept JavaScript style filters,\n",
+    "        # hence the \"!==\", rather than \"!=\"\n",
     "        Data.filter(\"record.Function !== 'Defense'\"),\n",
     "        Config(\n",
     "            {\n",
@@ -198,32 +207,27 @@
     "\n",
     "# Play the created story\n",
     "story.play()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": false
-   },
-   "id": "479e901d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "78793112",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# If you want to save the story as an interactive HTML\n",
     "# (containing only the output of the previous cell),\n",
     "# use the following command:\n",
     "# story.export_to_html(filename=\"mystory.html\")"
-   ],
-   "outputs": [],
-   "metadata": {},
-   "id": "78793112"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -235,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.0"
   },
   "title": "ipyvizzu-story - Example"
  },
