--- a/docs/examples/basic/basic.ipynb
+++ b/docs/examples/basic/basic.ipynb
@@ -20,17 +20,18 @@
     "from ipyvizzu import Data, Config\n",
     "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
-    "# First, initialize our data. \n",
+    "# First, initialize our data.\n",
     "data = Data()\n",
     "data.add_series(\"Foo\", [\"Alice\", \"Bob\", \"Ted\"])\n",
     "data.add_series(\"Bar\", [15, 32, 12])\n",
     "data.add_series(\"Baz\", [5, 3, 2])\n",
     "\n",
-    "# Create a blank story, attaching it to our dataset. \n",
+    "# Create a blank story, attaching it to our dataset.\n",
     "story = Story(data=data)\n",
     "\n",
     "# Each slide here is a page in the final interactive story\n",
-    "# For info on configuring Steps and providing Configs, please see the base ipyvizzu documentation.\n",
+    "# For info on configuring Steps and providing Configs,\n",
+    "# please see the base ipyvizzu documentation.\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        Config({\"x\": \"Foo\", \"y\": \"Bar\"}),\n",
@@ -39,7 +40,8 @@
     "story.add_slide(slide1)\n",
     "\n",
     "# Create the second slide.\n",
-    "# Configs provided here are changes to the visualization created in the previous Step.\n",
+    "# Configs provided here are changes to the visualization\n",
+    "# created in the previous Step.\n",
     "slide2 = Slide(\n",
     "    Step(\n",
     "        Config({\"color\": \"Foo\", \"x\": \"Baz\", \"geometry\": \"circle\"}),\n",
@@ -47,22 +49,14 @@
     ")\n",
     "story.add_slide(slide2)\n",
     "\n",
-    "# Display our end story! \n",
+    "# Display our end story!\n",
     "story.play()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e63da0aa-4688-49a2-8e36-a25b2fd0517e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -76,9 +70,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   },
-  "title": "ipyvizzu-story - basic example"
+  "title": "ipyvizzu-story - basic example",
+  "vscode": {
+   "interpreter": {
+    "hash": "8070ec5a1b44ee5e8bfcd3314e344090d51d1bec0f81f776c832eff212440f1f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
