--- a/docs/examples/basic/basic.ipynb
+++ b/docs/examples/basic/basic.ipynb
@@ -56,9 +56,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -70,14 +70,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   },
-  "title": "ipyvizzu-story - basic example",
-  "vscode": {
-   "interpreter": {
-    "hash": "8070ec5a1b44ee5e8bfcd3314e344090d51d1bec0f81f776c832eff212440f1f"
-   }
-  }
+  "title": "ipyvizzu-story - Example"
  },
  "nbformat": 4,
  "nbformat_minor": 5
