doc: add logo, social, style

--- a/docs/examples/community/dark_theme.ipynb
+++ b/docs/examples/community/dark_theme.ipynb
@@ -78,12 +78,18 @@
     "            \"yAxis\": {\n",
     "                \"color\": \"#CCCCCCFF\",\n",
     "                \"label\": {\"color\": \"#999999FF\", \"fontSize\": \"1em\"},\n",
-    "                \"title\": {\"color\": \"#999999FF\", \"fontSize\": \"1.166667em\"},\n",
+    "                \"title\": {\n",
+    "                    \"color\": \"#999999FF\",\n",
+    "                    \"fontSize\": \"1.166667em\",\n",
+    "                },\n",
     "                \"interlacing\": {\"color\": \"#212121\"},\n",
     "            },\n",
     "            \"xAxis\": {\n",
     "                \"label\": {\"color\": \"#999999FF\", \"fontSize\": \"1em\"},\n",
-    "                \"title\": {\"color\": \"#999999FF\", \"fontSize\": \"1.166667em\"},\n",
+    "                \"title\": {\n",
+    "                    \"color\": \"#999999FF\",\n",
+    "                    \"fontSize\": \"1.166667em\",\n",
+    "                },\n",
     "                \"interlacing\": {\"color\": \"#212121\"},\n",
     "            },\n",
     "        },\n",
