--- a/docs/examples/complex/complex.ipynb
+++ b/docs/examples/complex/complex.ipynb
@@ -5,7 +5,7 @@
    "id": "6e176697",
    "metadata": {},
    "source": [
-    "# ipyvizzu-story - complex example\n",
+    "# Complex example\n",
     "\n",
     "In this more involved example, we explore the history of the US Federal R&D budget between 1955-2020. On top of the base functionality introduced in the basic example, this story showcases: \n",
     "\n",
@@ -129,7 +129,9 @@
     "slide3.add_step(\n",
     "    Step(\n",
     "        Data.filter(None),\n",
-    "        Config({\"title\": \"Add New Category While Keeping the Context\"}),\n",
+    "        Config(\n",
+    "            {\"title\": \"Add New Category While Keeping the Context\"}\n",
+    "        ),\n",
     "    )\n",
     ")\n",
     "# Add the multi-step slide to the story, just like any other slide.\n",
@@ -138,7 +140,12 @@
     "# Show share of components\n",
     "slide4 = Slide(\n",
     "    Step(\n",
-    "        Config({\"align\": \"stretch\", \"title\": \"Show Share of Components (%)\"})\n",
+    "        Config(\n",
+    "            {\n",
+    "                \"align\": \"stretch\",\n",
+    "                \"title\": \"Show Share of Components (%)\",\n",
+    "            }\n",
+    "        )\n",
     "    )\n",
     ")\n",
     "story.add_slide(slide4)\n",
@@ -162,7 +169,9 @@
     "# Step 2 - zoom to data from the first and last years\n",
     "slide5.add_step(\n",
     "    Step(\n",
-    "        Data.filter(\"record.Year === '1955' || record.Year === '2020' \"),\n",
+    "        Data.filter(\n",
+    "            \"record.Year === '1955' || record.Year === '2020' \"\n",
+    "        ),\n",
     "        Config(\n",
     "            {\n",
     "                \"title\": \"Zoom to Specific Elements\",\n",
@@ -240,8 +249,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
-  },
-  "title": "ipyvizzu-story - Example"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
