--- a/docs/examples/demo/ipyvizzu-story_example.ipynb
+++ b/docs/examples/demo/ipyvizzu-story_example.ipynb
@@ -125,7 +125,9 @@
     "slide3.add_step(\n",
     "    Step(\n",
     "        Data.filter(None),\n",
-    "        Config({\"title\": \"Add New Category While Keeping the Context\"}),\n",
+    "        Config(\n",
+    "            {\"title\": \"Add New Category While Keeping the Context\"}\n",
+    "        ),\n",
     "    )\n",
     ")\n",
     "# Add the multi-step slide to the story, just like any other slide.\n",
@@ -134,7 +136,12 @@
     "# Show share of components\n",
     "slide4 = Slide(\n",
     "    Step(\n",
-    "        Config({\"align\": \"stretch\", \"title\": \"Show Share of Components (%)\"})\n",
+    "        Config(\n",
+    "            {\n",
+    "                \"align\": \"stretch\",\n",
+    "                \"title\": \"Show Share of Components (%)\",\n",
+    "            }\n",
+    "        )\n",
     "    )\n",
     ")\n",
     "story.add_slide(slide4)\n",
@@ -158,7 +165,9 @@
     "# Step 2 - zoom to data from the first and last years\n",
     "slide5.add_step(\n",
     "    Step(\n",
-    "        Data.filter(\"record.Year === '1955' || record.Year === '2020' \"),\n",
+    "        Data.filter(\n",
+    "            \"record.Year === '1955' || record.Year === '2020' \"\n",
+    "        ),\n",
     "        Config(\n",
     "            {\n",
     "                \"title\": \"Zoom to Specific Elements\",\n",
