--- a/docs/examples/basic/basic.ipynb
+++ b/docs/examples/basic/basic.ipynb
@@ -5,7 +5,7 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "# ipyvizzu-story - basic example\n",
+    "# Basic example\n",
     "\n",
     "The below chart shows a basic use case for `ipyvizzu-story`. For particular questions on setting up or customizing individual visuals, please see the [ipyvizzu documentation](https://ipyvizzu.vizzuhq.com/tutorial/01_01_intro.html)."
    ]
@@ -71,8 +71,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
-  },
-  "title": "ipyvizzu-story - Example"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
