doc: replace site url

--- a/docs/examples/demo/ipyvizzu-story_example.ipynb
+++ b/docs/examples/demo/ipyvizzu-story_example.ipynb
@@ -232,7 +232,7 @@
    "id": "1a4a70d4",
    "metadata": {},
    "source": [
-    "## Learn more about ipyvizzu-story: [Documentation site](https://vizzuhq.github.io/ipyvizzu-story/), [GitHub repository](https://github.com/vizzuhq/ipyvizzu-story/)"
+    "## Learn more about ipyvizzu-story: [Documentation site](https://ipyvizzu-story.vizzuhq.com), [GitHub repository](https://github.com/vizzuhq/ipyvizzu-story/)"
    ]
   }
  ],
