doc: fix some urls

--- a/docs/examples/basic/basic.ipynb
+++ b/docs/examples/basic/basic.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Basic example\n",
     "\n",
-    "The below chart shows a basic use case for `ipyvizzu-story`. For particular questions on setting up or customizing individual visuals, please see the [ipyvizzu documentation](https://ipyvizzu.vizzuhq.com/tutorial/01_01_intro.html)."
+    "The below chart shows a basic use case for `ipyvizzu-story`. For particular questions on setting up or customizing individual visuals, please see the [ipyvizzu documentation](https://ipyvizzu.vizzuhq.com/latest/tutorial/)."
    ]
   },
   {
