doc: restruct examples

--- a/docs/examples/basic.ipynb
+++ b/docs/examples/basic.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a892fbda",
    "metadata": {},
    "source": [
     "# Basic example\n",
     "\n",
-    "The below chart shows a basic use case for `ipyvizzu-story`. For particular questions on setting up or customizing individual visuals, please see the [ipyvizzu documentation](https://ipyvizzu.vizzuhq.com/latest/tutorial/)."
+    "The below story shows a basic use case for `ipyvizzu-story`."
    ]
   },
   {
