--- a/docs/examples/us_budget.ipynb
+++ b/docs/examples/us_budget.ipynb
@@ -1,22 +1,25 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "d3186103",
+   "id": "6e176697",
    "metadata": {},
    "source": [
-    "# ipyvizzu-story - example\n",
+    "# US Federal R&D budget\n",
     "\n",
-    "The history of the US Federal R&D budget between 1955-2020."
+    "In this more involved example, we explore the history of the US Federal R&D budget between 1955-2020. On top of the base functionality, this story showcases: \n",
+    "\n",
+    "* Styling the overall Story\n",
+    "* Setting the size of the Story\n",
+    "* Slides with multiple steps"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c686cf",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "479e901d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -27,21 +30,11 @@
     "# Create data object, read csv to data frame and add data frame to data object.\n",
     "example_data = Data()\n",
     "example_df = pd.read_csv(\n",
-    "    \"https://raw.githubusercontent.com/vizzuhq/ipyvizzu-story/main/docs/examples/demo/ipyvizzu-story_example.csv\",\n",
+    "    \"./us_budget/us_budget.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
-    "example_data.add_data_frame(example_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f9a23ef",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
+    "example_data.add_data_frame(example_df)\n",
+    "\n",
     "# Set the style of the charts in the story\n",
     "example_style = Style(\n",
     "    {\n",
@@ -78,6 +71,8 @@
     "slide1 = Slide(\n",
     "    Step(\n",
     "        # Only include rows where the Function value != Defense\n",
+    "        # Note, filters currently only accept JavaScript style filters,\n",
+    "        # hence the \"!==\", rather than \"!=\"\n",
     "        Data.filter(\"record.Function !== 'Defense'\"),\n",
     "        Config(\n",
     "            {\n",
@@ -210,29 +205,13 @@
     "# Add handler to the plot-axis-label-draw event so that it takes effect.\n",
     "story.add_event(\"plot-axis-label-draw\", handler)\n",
     "\n",
-    "# Play the created story\n",
-    "story.play()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b853f53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# If you want to save the story as an interactive HTML\n",
     "# (containing only the output of the previous cell),\n",
     "# use the following command:\n",
-    "# story.export_to_html(filename=\"mystory.html\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a4a70d4",
-   "metadata": {},
-   "source": [
-    "## Learn more about ipyvizzu-story: [Documentation site](https://ipyvizzu-story.vizzuhq.com), [GitHub repository](https://github.com/vizzuhq/ipyvizzu-story/)"
+    "# story.export_to_html(filename=\"mystory.html\")\n",
+    "\n",
+    "# Play the created story\n",
+    "story.play()"
    ]
   }
  ],
@@ -252,9 +231,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "title": "ipyvizzu-story - Example"
+   "version": "3.10.6"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
