doc: add linkedin example

--- a/docs/examples/africa.ipynb
+++ b/docs/examples/africa.ipynb
@@ -25,7 +25,10 @@
     "\n",
     "\n",
     "data = Data()\n",
-    "df = pd.read_csv(\"./africa/africa.csv\", dtype={\"Year\": str})\n",
+    "df = pd.read_csv(\n",
+    "    \"./africa/africa.csv\",\n",
+    "    dtype={\"Year\": str},\n",
+    ")\n",
     "data.add_data_frame(df)\n",
     "\n",
     "story = Story(data=data)\n",
