--- a/docs/examples/prog_languages.ipynb
+++ b/docs/examples/prog_languages.ipynb
@@ -6,7 +6,11 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "# Data Science programming languages"
+    "# Data Science programming languages\n",
+    "\n",
+    "What programming languages do data scientists use?\n",
+    "\n",
+    "This was one of the questions in the [State of Data Science Reports](https://www.anaconda.com/state-of-data-science-report-2022) published by Anaconda between 2020 and 2022. This data story shows the answers to this question."
    ]
   },
   {
