--- a/docs/examples/africa.ipynb
+++ b/docs/examples/africa.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Population of Africa\n",
     "\n",
-    "In this example, we explore the population of Africa between 1953-2018. On top of that, this story shows how to use the chart configuration presets."
+    "In this example, we explore the population of Africa between 1953-2018. On top of that, this story shows how to use the chart configuration presets. Check [ipyvizzu - Chart presets chapter](https://ipyvizzu.vizzuhq.com/latest/tutorial/chart_presets/) and [ipyvizzu - Preset charts gallery](https://ipyvizzu.vizzuhq.com/latest/examples/presets/) for more details on the available chart presets."
    ]
   },
   {
