--- a/docs/examples/linkedin_poll.ipynb
+++ b/docs/examples/linkedin_poll.ipynb
@@ -6,7 +6,7 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "# Data Science LinkedIn poll results\n",
+    "# Presentation Poll Results\n",
     "\n",
     "In August, 2022, we asked data scientists in 5 LinkedIn groups about how often they have to present the results of their analysis to business stakeholders. This is a data story about the results of that poll."
    ]
