--- a/docs/examples/prog_languages.ipynb
+++ b/docs/examples/prog_languages.ipynb
@@ -6,7 +6,7 @@
    "id": "a892fbda",
    "metadata": {},
    "source": [
-    "# Data Science programming languages\n",
+    "# Popularity of Programming Languages\n",
     "\n",
     "What programming languages do data scientists use?\n",
     "\n",
