doc: rename examples

--- a/docs/examples/usbudget.ipynb
+++ b/docs/examples/usbudget.ipynb
@@ -31,7 +31,7 @@
     "# Create data object, read csv to data frame and add data frame to data object.\n",
     "example_data = Data()\n",
     "example_df = pd.read_csv(\n",
-    "    \"./us_budget/us_budget.csv\",\n",
+    "    \"./usbudget/usbudget.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
     "example_data.add_data_frame(example_df)\n",
