--- a/docs/examples/population.ipynb
+++ b/docs/examples/population.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "data = Data()\n",
     "df = pd.read_csv(\n",
-    "    \"./africa/africa.csv\",\n",
+    "    \"./population/population.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
     "data.add_data_frame(df)\n",
