--- a/docs/examples/proglangs.ipynb
+++ b/docs/examples/proglangs.ipynb
@@ -29,7 +29,7 @@
     "# Create data object, read csv to data frame and add data frame to data object.\n",
     "data = Data()\n",
     "df = pd.read_csv(\n",
-    "    \"./prog_languages/prog_languages.csv\",\n",
+    "    \"./proglangs/proglangs.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
     "data.add_data_frame(df)\n",
