doc: update examples

--- a/docs/examples/_basic.ipynb
+++ b/docs/examples/_basic.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a892fbda",
    "metadata": {},
@@ -22,30 +21,30 @@
     "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
     "\n",
-    "# First, initialize our data.\n",
+    "# Create data object\n",
     "data = Data()\n",
     "data.add_series(\"Foo\", [\"Alice\", \"Bob\", \"Ted\"])\n",
     "data.add_series(\"Bar\", [15, 32, 12])\n",
     "data.add_series(\"Baz\", [5, 3, 2])\n",
     "\n",
     "\n",
-    "# Create a blank story, attaching it to our dataset.\n",
+    "# Create story object, add data to it\n",
     "story = Story(data=data)\n",
     "\n",
     "\n",
     "# Each slide here is a page in the final interactive story\n",
-    "# For info on configuring Steps and providing Configs,\n",
-    "# please see the base ipyvizzu documentation.\n",
+    "# Add the first slide\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        Config({\"x\": \"Foo\", \"y\": \"Bar\"}),\n",
     "    )\n",
     ")\n",
+    "# Add the slide to the story\n",
     "story.add_slide(slide1)\n",
     "\n",
-    "# Create the second slide.\n",
+    "# Create the second slide\n",
     "# Configs provided here are changes to the visualization\n",
-    "# created in the previous Step.\n",
+    "# created in the previous Step\n",
     "slide2 = Slide(\n",
     "    Step(\n",
     "        Config({\"color\": \"Foo\", \"x\": \"Baz\", \"geometry\": \"circle\"}),\n",
@@ -54,7 +53,7 @@
     "story.add_slide(slide2)\n",
     "\n",
     "\n",
-    "# Display our end story!\n",
+    "# Play the created story!\n",
     "story.play()"
    ]
   }
@@ -75,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
