--- a/docs/examples/titanic.ipynb
+++ b/docs/examples/titanic.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a892fbda",
    "metadata": {},
@@ -22,7 +21,7 @@
     "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
     "\n",
-    "# Create data object, read csv to data frame and add data frame to data object.\n",
+    "# Create data object, read csv to data frame and add data frame to data object\n",
     "data = Data()\n",
     "df = pd.read_csv(\n",
     "    \"./titanic/titanic.csv\",\n",
@@ -37,7 +36,7 @@
     "df.loc[df[\"Age\"].between(60, 100, \"right\"), \"Age_group\"] = \"60+\"\n",
     "df[\"Age_group\"] = df[\"Age_group\"].fillna(\"NaN\")\n",
     "\n",
-    "# Prepare to sort the dataframe by salary list.\n",
+    "# Prepare to sort the dataframe by salary list\n",
     "agegroupsorter = [\n",
     "    \"20-\",\n",
     "    \"20-30\",\n",
@@ -48,18 +47,18 @@
     "    \"NaN\",\n",
     "]\n",
     "\n",
-    "# Create the dictionary that defines the order for sorting.\n",
+    "# Create the dictionary that defines the order for sorting\n",
     "sorterIndex = dict(zip(agegroupsorter, range(len(agegroupsorter))))\n",
     "\n",
     "# Generate a rank column that will be used to sort\n",
-    "# the dataframe numerically.\n",
+    "# the dataframe numerically\n",
     "df[\"Age_group_rank\"] = df[\"Age_group\"].map(sorterIndex)\n",
     "df.sort_values([\"Age_group_rank\"], inplace=True)\n",
     "\n",
     "data.add_data_frame(df)\n",
     "\n",
     "\n",
-    "# Set the style of the charts in the story.\n",
+    "# Set the style of the charts in the story\n",
     "style = Style(\n",
     "    {\n",
     "        \"plot\": {\n",
@@ -85,17 +84,19 @@
     ")\n",
     "\n",
     "# Create story object, add data and style settings to it\n",
-    "# and set the size of the HTML element that appears within the notebook.\n",
     "story = Story(data=data, style=style)\n",
+    "\n",
+    "# Set the size of the HTML element\n",
+    "# that appears within the notebook\n",
     "story.set_size(\"100%\", \"400px\")\n",
     "\n",
-    "# Switch on the tooltip\n",
-    "# that appears when the user hovers the mouse over a chart element.\n",
+    "# Switch on the tooltip that appears\n",
+    "# when the user hovers the mouse over a chart element\n",
     "story.set_feature(\"tooltip\", True)\n",
     "\n",
     "\n",
-    "# Add the first slide,\n",
-    "# containing a single animation step that sets the initial chart.\n",
+    "# Each slide here is a page in the final interactive story\n",
+    "# Add the first slide\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        Config.bar(\n",
@@ -103,7 +104,7 @@
     "        ),\n",
     "    )\n",
     ")\n",
-    "# Add the slide to the story.\n",
+    "# Add the slide to the story\n",
     "story.add_slide(slide1)\n",
     "\n",
     "slide2 = Slide()\n",
@@ -249,7 +250,7 @@
     "story.add_slide(slide8)\n",
     "\n",
     "\n",
-    "# Play the created story.\n",
+    "# Play the created story!\n",
     "story.play()"
    ]
   }
@@ -270,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
