--- a/docs/examples/population.ipynb
+++ b/docs/examples/population.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a892fbda",
    "metadata": {},
@@ -24,6 +23,7 @@
     "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
     "\n",
+    "# Create data object, read csv to data frame and add data frame to data object\n",
     "data = Data()\n",
     "df = pd.read_csv(\n",
     "    \"./population/population.csv\",\n",
@@ -32,11 +32,20 @@
     "data.add_data_frame(df)\n",
     "\n",
     "\n",
+    "# Create story object, add data to it\n",
     "story = Story(data=data)\n",
-    "story.set_feature(\"tooltip\", True)\n",
+    "\n",
+    "# Set the size of the HTML element\n",
+    "# that appears within the notebook\n",
     "story.set_size(\"100%\", \"400px\")\n",
     "\n",
+    "# Switch on the tooltip that appears\n",
+    "# when the user hovers the mouse over a chart element\n",
+    "story.set_feature(\"tooltip\", True)\n",
     "\n",
+    "\n",
+    "# Each slide here is a page in the final interactive story\n",
+    "# Add the first slide\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        Data.filter(\"record.Continent == 'Africa'\"),\n",
@@ -51,6 +60,7 @@
     "        Style({\"plot\": {\"xAxis\": {\"label\": {\"angle\": 2.0}}}}),\n",
     "    )\n",
     ")\n",
+    "# Add the slide to the story\n",
     "story.add_slide(slide1)\n",
     "\n",
     "slide2 = Slide(\n",
@@ -93,6 +103,7 @@
     "story.add_slide(slide4)\n",
     "\n",
     "\n",
+    "# Play the created story!\n",
     "story.play()"
    ]
   }
@@ -113,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
