--- a/docs/examples/trumptwitter.ipynb
+++ b/docs/examples/trumptwitter.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a892fbda",
    "metadata": {},
@@ -22,6 +21,7 @@
     "from ipyvizzustory import Story, Slide, Step\n",
     "\n",
     "\n",
+    "# Create data object, read csv to data frame and add data frame to data object\n",
     "data = Data()\n",
     "df = pd.read_csv(\n",
     "    \"./trumptwitter/trumptwitter.csv\",\n",
@@ -29,6 +29,7 @@
     "data.add_data_frame(df)\n",
     "\n",
     "\n",
+    "# Set the style of the charts in the story\n",
     "style = Style(\n",
     "    {\n",
     "        \"tooltip\": {\"fontSize\": \"22px\"},\n",
@@ -55,11 +56,20 @@
     "    }\n",
     ")\n",
     "\n",
+    "# Create story object, add data and style settings to it\n",
     "story = Story(data=data, style=style)\n",
-    "story.set_feature(\"tooltip\", True)\n",
+    "\n",
+    "# Set the size of the HTML element\n",
+    "# that appears within the notebook\n",
     "story.set_size(\"100%\", \"400px\")\n",
     "\n",
+    "# Switch on the tooltip that appears\n",
+    "# when the user hovers the mouse over a chart element\n",
+    "story.set_feature(\"tooltip\", True)\n",
     "\n",
+    "\n",
+    "# Each slide here is a page in the final interactive story\n",
+    "# Add the first slide\n",
     "slide1 = Slide(\n",
     "    Step(\n",
     "        Data.filter(\n",
@@ -79,6 +89,7 @@
     "        ),\n",
     "    )\n",
     ")\n",
+    "# Add the slide to the story\n",
     "story.add_slide(slide1)\n",
     "\n",
     "slide2 = Slide(\n",
@@ -417,6 +428,7 @@
     "story.add_slide(slide17)\n",
     "\n",
     "\n",
+    "# Play the created story!\n",
     "story.play()"
    ]
   }
@@ -437,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
