change Nem to No and Igen to Yes in the notebook

--- a/docs/examples/trumptwitter.ipynb
+++ b/docs/examples/trumptwitter.ipynb
@@ -73,7 +73,7 @@
     "slide1 = Slide(\n",
     "    Step(\n",
     "        Data.filter(\n",
-    "            \"record.Firsttweet === 'Igen' && record.Dummy === 'Nem'\"\n",
+    "            \"record.Firsttweet === 'Yes' && record.Dummy === 'No'\"\n",
     "        ),\n",
     "        Config(\n",
     "            {\n",
@@ -95,7 +95,7 @@
     "slide2 = Slide(\n",
     "    Step(\n",
     "        Data.filter(\n",
-    "            \"record.Period === 'New to Twitter' && record.Dummy === 'Nem'\"\n",
+    "            \"record.Period === 'New to Twitter' && record.Dummy === 'No'\"\n",
     "        ),\n",
     "        Config(\n",
     "            {\n",
@@ -111,7 +111,7 @@
     "        Data.filter(\n",
     "            \"\"\"\n",
     "            (record.Period === 'New to Twitter' || record.Period === 'Businessman')\n",
-    "            && record.Dummy === 'Nem'\n",
+    "            && record.Dummy === 'No'\n",
     "            \"\"\"\n",
     "        ),\n",
     "        Config(\n",
@@ -130,7 +130,7 @@
     "            (record.Period === 'New to Twitter' || \n",
     "            record.Period === 'Businessman' || \n",
     "            record.Period === 'Nominee')\n",
-    "            && record.Dummy === 'Nem'\n",
+    "            && record.Dummy === 'No'\n",
     "            \"\"\"\n",
     "        ),\n",
     "        Config(\n",
@@ -144,7 +144,7 @@
     "\n",
     "slide5 = Slide(\n",
     "    Step(\n",
-    "        Data.filter(\"record.Dummy === 'Nem'\"),\n",
+    "        Data.filter(\"record.Dummy === 'No'\"),\n",
     "        Config(\n",
     "            {\n",
     "                \"title\": \"And after he became President\",\n",
