documentation: change  `add_data_frame` to `add_df`

--- a/community/dark_theme.ipynb
+++ b/community/dark_theme.ipynb
@@ -27,7 +27,7 @@
     "    + \"gh-pages/docs/data/chart_types_eu.csv\",\n",
     "    dtype={\"Year\": str, \"Timeseries\": str},\n",
     ")\n",
-    "data.add_data_frame(data_frame)"
+    "data.add_df(data_frame)"
    ]
   },
   {
