--- a/community/worldpopulation.ipynb
+++ b/community/worldpopulation.ipynb
@@ -305,7 +305,7 @@
     "    dtype={\"Year\": str},\n",
     ")\n",
     "data = Data()\n",
-    "data.add_data_frame(data_frame)\n",
+    "data.add_df(data_frame)\n",
     "\n",
     "display(data_frame)"
    ]
@@ -617,7 +617,7 @@
     "    dtype={\"Year\": str},\n",
     ")\n",
     "data = Data()\n",
-    "data.add_data_frame(data_frame)\n",
+    "data.add_df(data_frame)\n",
     "\n",
     "display(data_frame)"
    ]
