--- a/docs/examples/titanic/titanic_share.ipynb
+++ b/docs/examples/titanic/titanic_share.ipynb
@@ -55,7 +55,7 @@
     "df[\"Age_group_rank\"] = df[\"Age_group\"].map(sorterIndex)\n",
     "df.sort_values([\"Age_group_rank\"], inplace=True)\n",
     "\n",
-    "data.add_data_frame(df)\n",
+    "data.add_df(df)\n",
     "\n",
     "\n",
     "# Set the style of the charts in the story\n",
