--- a/docs/examples/trumptwitter/trumptwitter_share.ipynb
+++ b/docs/examples/trumptwitter/trumptwitter_share.ipynb
@@ -26,7 +26,7 @@
     "df = pd.read_csv(\n",
     "    \"https://ipyvizzu-story.vizzuhq.com/latest/examples/trumptwitter/trumptwitter.csv\",\n",
     ")\n",
-    "data.add_data_frame(df)\n",
+    "data.add_df(df)\n",
     "\n",
     "\n",
     "# Set the style of the charts in the story\n",
