--- a/docs/examples/usbudget/usbudget_share.ipynb
+++ b/docs/examples/usbudget/usbudget_share.ipynb
@@ -33,7 +33,7 @@
     "    \"https://ipyvizzu-story.vizzuhq.com/latest/examples/usbudget/usbudget.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
-    "example_data.add_data_frame(example_df)\n",
+    "example_data.add_df(example_df)\n",
     "\n",
     "\n",
     "# Set the style of the charts in the story\n",
