--- a/docs/examples/population/population_share.ipynb
+++ b/docs/examples/population/population_share.ipynb
@@ -29,7 +29,7 @@
     "    \"https://ipyvizzu-story.vizzuhq.com/latest/examples/population/population.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
-    "data.add_data_frame(df)\n",
+    "data.add_df(df)\n",
     "\n",
     "\n",
     "# Create story object, add data to it\n",
