--- a/docs/examples/proglangs/proglangs_share.ipynb
+++ b/docs/examples/proglangs/proglangs_share.ipynb
@@ -31,7 +31,7 @@
     "    \"https://ipyvizzu-story.vizzuhq.com/latest/examples/proglangs/proglangs.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
-    "data.add_data_frame(df)\n",
+    "data.add_df(df)\n",
     "\n",
     "\n",
     "# Create story object, add data to it\n",
