fixed docs example

--- a/docs/examples/trumptwitter/trumptwitter_share.ipynb
+++ b/docs/examples/trumptwitter/trumptwitter_share.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "import pandas as pd\n",
     "\n",
     "from ipyvizzu import Data, Config, Style\n",
@@ -379,7 +380,7 @@
     "        Config(\n",
     "            {\n",
     "                \"coordSystem\": \"polar\",\n",
-    "                \"rotate\": 180,\n",
+    "                \"angle\": math.pi,\n",
     "                \"title\": \"Time of Day When Trump Tweeted\",\n",
     "            }\n",
     "        ),\n",
