--- a/docs/examples/linkedinpoll/linkedinpoll_share.ipynb
+++ b/docs/examples/linkedinpoll/linkedinpoll_share.ipynb
@@ -29,7 +29,7 @@
     "    \"https://ipyvizzu-story.vizzuhq.com/latest/examples/linkedinpoll/linkedinpoll.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
-    "data.add_df(df)\n",
+    "data.add_df(df, units={\"Answer percentage\": \"%\", \"Vote percentage\": \"%\"})\n",
     "\n",
     "# Create story object, add data to it\n",
     "story = Story(data=data)\n",
@@ -64,10 +64,10 @@
     "        ),\n",
     "        Config(\n",
     "            {\n",
-    "                \"x\": {\"set\": [\"Vote percentage [%]\", \"Answer\"]},\n",
+    "                \"x\": {\"set\": [\"Vote percentage\", \"Answer\"]},\n",
     "                \"y\": \"Group number\",\n",
     "                \"color\": \"Answer\",\n",
-    "                \"label\": \"Vote percentage [%]\",\n",
+    "                \"label\": \"Vote percentage\",\n",
     "                \"title\": \"How often do you present \"\n",
     "                + \"your findings to business stakeholders?\",\n",
     "            }\n",
@@ -139,9 +139,9 @@
     "    Step(\n",
     "        Config(\n",
     "            {\n",
-    "                \"x\": [\"Answer percentage [%]\", \"Answer\"],\n",
+    "                \"x\": [\"Answer percentage\", \"Answer\"],\n",
     "                \"y\": None,\n",
-    "                \"label\": \"Answer percentage [%]\",\n",
+    "                \"label\": \"Answer percentage\",\n",
     "            }\n",
     "        )\n",
     "    )\n",
