--- a/docs/examples/usbudget/usbudget_share.ipynb
+++ b/docs/examples/usbudget/usbudget_share.ipynb
@@ -33,7 +33,7 @@
     "    \"https://ipyvizzu-story.vizzuhq.com/latest/examples/usbudget/usbudget.csv\",\n",
     "    dtype={\"Year\": str},\n",
     ")\n",
-    "data.add_df(df)\n",
+    "data.add_df(df, units={\"Amount\": \"B$\"})\n",
     "\n",
     "\n",
     "# Set the style of the charts in the story\n",
@@ -81,7 +81,7 @@
     "            {\n",
     "                \"channels\": {\n",
     "                    \"y\": {\n",
-    "                        \"set\": [\"Amount[B$]\", \"Function\"],\n",
+    "                        \"set\": [\"Amount\", \"Function\"],\n",
     "                        # Set the range of the y-axis\n",
     "                        # to the min and max of the data being shown\n",
     "                        # default value is 110% of the maximum value\n",
@@ -179,8 +179,8 @@
     "        Config(\n",
     "            {\n",
     "                \"x\": [\"Year\", \"Function\"],\n",
-    "                \"y\": \"Amount[B$]\",\n",
-    "                \"label\": \"Amount[B$]\",\n",
+    "                \"y\": \"Amount\",\n",
+    "                \"label\": \"Amount\",\n",
     "                \"title\": \"Group & Rearrange for Better Comparison\",\n",
     "            }\n",
     "        )\n",
