--- a/docs/examples/proglangs/proglangs_share.ipynb
+++ b/docs/examples/proglangs/proglangs_share.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "# Set a handler that prevents showing specific elements\n",
     "label_handler_method = (\n",
-    "    \"if(event.data.text.split(' ')[0] < 5) event.preventDefault()\"\n",
+    "    \"if(event.detail.text.split(' ')[0] < 5) event.preventDefault()\"\n",
     ")\n",
     "story.add_event(\"plot-marker-label-draw\", label_handler_method)\n",
     "\n",
