--- a/docs/examples/usbudget/usbudget_share.ipynb
+++ b/docs/examples/usbudget/usbudget_share.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "# Set a handler that prevents showing the year values that are not divisible by 5\n",
     "handler = \"\"\"\n",
-    "let Year = parseFloat(event.data.text);\n",
+    "let Year = parseFloat(event.detail.text);\n",
     "if (!isNaN(Year) && Year > 1950 && Year < 2020 && Year % 5 !== 0) {\n",
     "    event.preventDefault();\n",
     "}\n",
