change align min to none

--- a/docs/examples/proglangs/proglangs_share.ipynb
+++ b/docs/examples/proglangs/proglangs_share.ipynb
@@ -98,7 +98,7 @@
     "        Config(\n",
     "            {\n",
     "                \"split\": True,\n",
-    "                \"align\": \"min\",\n",
+    "                \"align\": \"none\",\n",
     "                \"title\": \"Python is always or frequently used by 58%\",\n",
     "            }\n",
     "        ),\n",
@@ -122,7 +122,7 @@
     "            && record.Year == 2022\n",
     "            \"\"\"\n",
     "        ),\n",
-    "        Config({\"x\": {\"range\": {\"max\": 100}}, \"align\": \"min\"}),\n",
+    "        Config({\"x\": {\"range\": {\"max\": 100}}, \"align\": \"none\"}),\n",
     "    )\n",
     ")\n",
     "slide3.add_step(\n",
