Changed: set vizzu-story default version to 0.8.x (vizzu version to 0.16.x)

--- a/docs/examples/trumptwitter/trumptwitter_share.ipynb
+++ b/docs/examples/trumptwitter/trumptwitter_share.ipynb
@@ -359,9 +359,8 @@
     "    Step(\n",
     "        Config(\n",
     "            {\n",
-    "                \"y\": [\"tweets\", \"Tool\"],\n",
+    "                \"y\": {\"set\": [\"tweets\", \"Tool\"], \"range\": {\"min\": \"110%\", \"max\": \"0%\"}},\n",
     "                \"x\": [\"AMPM\", \"hour12\"],\n",
-    "                \"align\": \"max\",\n",
     "            }\n",
     "        ),\n",
     "    )\n",
